# summer-the-explorer

./: .env.example  .gitattributes  .gitignore  Cargo.toml  LICENSE-APACHE2  LICENSE-MIT  Procfile  README.md  deploy.sh
.cargo/: config.toml
common/: Cargo.toml
common/src/: lib.rs
common/src/database/: connection.rs  manager.rs  mod.rs
common/src/services/: embedding.rs  external.rs  mod.rs
common/src/utils/: certs.rs  config.rs  error.rs  mod.rs  modal.rs
explorer/: main.rs
explorer/handlers/: comments.rs  leaderboard.rs  logs.rs  mirror.rs  mod.rs  projects.rs  users.rs
explorer/middleware/: mod.rs
explorer/models/: comment.rs  logs.rs  mod.rs  project.rs  user.rs
explorer/services/: embedding.rs
explorer/utils/: database.rs  error.rs
migrations/: 001_initial_schema.sql
minilm-build/: config.json
oculus/: .env.example  Cargo.toml
oculus/src/: main.rs
oculus/src/core/: mod.rs  progress.rs
oculus/src/forge/: fetch.rs  mod.rs  store.rs  sync.rs
oculus/src/init/: embed.rs  mod.rs
oculus/src/prune/: mod.rs
oculus/src/reform/: mod.rs
oculus/src/trace/: mod.rs  slack.rs  trust.rs  update.rs
oculus/src/zenith/: mod.rs
