[package]
name = "summer-the-explorer"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
codegen-units = 1
panic = "abort"
rpath = false
lto = "fat"
strip = "symbols"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
axum = { version = "0.8.4", features = ["json"] }
chrono = { version = "0.4.41", features = ["serde"] }
common = { path = "common" }
deadpool-postgres = "0.14.1"
pgvector = { version = "0.4.1", features = ["serde", "postgres"], default-features = false }
reqwest = { version = "0.12.22", features = ["json", "cookies", "rustls-tls"], default-features = false }
rustls = "0.23.7"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_urlencoded = "0.7.1"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4", "with-serde_json-1"] }
tokio-postgres-rustls = "0.12.0"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
webpki-roots = "0.26.1"

[dev-dependencies]
once_cell = "1.19.0"
reqwest = { version = "0.12.22", features = ["json", "cookies", "rustls-tls"], default-features = false }
tokio = { version = "1.46.1", features = ["full"], default-features = false }

[[bin]]
name = "summer-the-explorer"
path = "explorer/main.rs"

[profile.dev]
opt-level = 1

[workspace]
members = [".", "oculus", "common"]
