[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
deadpool-postgres = "0.14"
dotenvy = "0.15"
futures = "0.3"
indicatif = "0.18.0"
ndarray = "0.16.0"
parking_lot = "0.12"
pgvector = { version = "0.4.1", features = ["serde", "postgres"], default-features = false }
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls"], default-features = false }
rustls = "0.23.7"
rustls-pemfile = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
tokenizers = "0.21.2"
tokio = { version = "1.46", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
tokio-postgres-rustls = "0.13.0"
tracing = "0.1"
tracing-subscriber = "0.3"
webpki-roots = "1.0.2"
ort = { version = "2.0.0-rc.1", features = ["coreml"] }
rand = "0.9.2"

[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
ort = { version = "2.0.0-rc.1", features = ["load-dynamic"], default-features = false } # no copy dylib cuz that doesn't work when crosscompiling for some reason?

[features]
default = ["cpu-embedding"]
cpu-embedding = []
gpu-embedding = []


