[package]
name = "oculus"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
common = { path = "../common" }
dashmap = "6.1"
dotenvy = "0.15"
futures = "0.3"
indicatif = "0.17"
parking_lot = "0.12"
pgvector = { version = "0.4.1", features = ["serde", "postgres"], default-features = false }
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls"], default-features = false }
rustls = "0.23.7"
rustls-pemfile = "2.2.0"
webpki-roots = "0.26.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.46.1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
tokio-postgres-rustls = "0.12.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.0", features = ["v4", "serde"] }
